# qproperty_performance_report

./: CMakeLists.txt  LICENSE  PubSub.cpp  PubSub.h  README.md  configuration.h  main.cpp  property_memory_measurement.cpp  property_memory_measurement.h  qproperty_memory_measurement.cpp  qproperty_memory_measurement.h
latex/: CMakeCache.txt  binding_dirtyread.txt  binding_memusage.txt  binding_nondirtyread.txt  binding_setnotify.txt  newbinding_dirtyread.txt  newbinding_memusage.txt  newbinding_nondirtyread.txt  newbinding_setnotify.txt  report.tex  sizeofs.txt
